# sioctl-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
sndio-sys/: Cargo.toml  build.rs  wrapper.h
sndio-sys/src/: lib.rs
src/: lib.rs
