[package]
name = "sioctl"
version = "0.0.2"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
description = "An interface for reading the state of sndio controls."
repository = "https://github.com/mjkillough/sioctl-rs"
readme = "README.md"
keywords = ["sndio", "sound", "audio", "openbsd"]
license = "MIT"
categories = ["multimedia"]
edition = "2018"

[[bin]]
name = "sioctl"
doc = false

[dependencies]
nix = "0.17"
libc = "0.2"
sndio-sys = { version = "0.0.1", path = "./sndio-sys/" }

